--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -192,8 +192,8 @@
                 <div class="col-lg-3 p-3" style="    ">
                     <div class="wow bounceInUp" data-wow-delay="0.2s">
                         <div class="team boxed-grey" style=" height: 373px;">
-                            <div class="inner" onclick="location.href='/services/individual-management'"  style="cursor: pointer">
-                                <h5>Портфель 1 <br /> ФОНДОВЫЙ </h5>  <br />
+                            <div class="inner" onclick="location.href='/services/1'"  style="cursor: pointer">
+                                <h5>Портфель 1 <br /> GERA </h5>  <br />
                                 {#<p class="subtitle">Pixel Crafter</p>#}
                                 <div class="avatar">
                                     <center>
@@ -208,8 +208,8 @@
                 <div class="col-lg-3 p-3">
                     <div class="wow bounceInUp" data-wow-delay="0.2s">
                         <div class="team boxed-grey" style=" height: 373px;">
-                            <div class="inner"  onclick="location.href='/services/robotic-trading'"  style="cursor: pointer">
-                                <h5>Портфель 2  <br />  «Роботизированная торговля»      <br />
+                            <div class="inner"  onclick="location.href='/services/2'"  style="cursor: pointer">
+                                <h5>Портфель 2  <br />  ZEUS      <br /> <br />
                                 {#<p class="subtitle">Pixel Crafter</p>#}
                                 <div class="avatar">
                                     <center>
@@ -223,8 +223,8 @@
                 <div class="col-lg-3 p-3">
                     <div class="wow bounceInUp" data-wow-delay="0.5s">
                         <div class="team boxed-grey" style=" height: 373px;">
-                            <div class="inner"  onclick="location.href='/services/ipo'"  style="cursor: pointer">
-                                <h5>Портфель 3 <br /> IPO <br /><br /></h5>
+                            <div class="inner"  onclick="location.href='/services/3'"  style="cursor: pointer">
+                                <h5>Портфель 3 <br /> Cбалансированная <br /><br /></h5>
                                 {#<p class="subtitle">Ruby on Rails</p>#}
                                 <div class="avatar">
                                     <center>
@@ -238,9 +238,9 @@
                 </div>
                 <div class="col-lg-3 p-3">
                     <div class="wow bounceInUp" data-wow-delay="0.8s">
-                        <div class="team boxed-grey" style=" height: 373px;">
-                            <div class="inner"  onclick="location.href='/services/hedge-fund'"  style="cursor: pointer">
-                                <h5>Портфель 4 <br /> «Хэдж-фонд»</h5><br />
+                        <div class="team boxed-grey" style=" height: 350px;">
+                            <div class="inner"  onclick="location.href='/services/4'"  style="cursor: pointer">
+                                <h5>Портфель 4 <br /> Кредит  </h5><br />
                                 {#<p class="subtitle">jQuery Ninja</p>#}
                                 <div class="avatar">
                                     <center>
@@ -392,23 +392,23 @@
                     <tbody style=" text-align: left;">
                     <tr>
                         <th scope="row">1</th>
-                        <td>Фондовая торговля</td>
-                        <td style="color:#335433;" > до 10-25%/мес  </td>
+                        <td>GERA</td>
+                        <td style="color:#335433;" > до 100%  </td>
                         <td>
-                            <a href="/services/individual-management"> Открыть</a>
+                            <a href="/services/1"> Открыть</a>
                         </td>
                     </tr>
                     <tr>
                         <th scope="row">2</th>
-                        <td>Роботизированная торговля</td>
-                        <td style="color:#335433;"> 10-20% в месяц </td>
+                        <td>ZEUS</td>
+                        <td style="color:#335433;">возможная доходность до  800% </td>
                         <td>
 
                             {#<a href="#">Открыть</a>#}
 
 
 
-                            <a href="/services/robotic-trading"> Открыть</a>
+                            <a href="/services/2"> Открыть</a>
 
 
 
@@ -416,13 +416,13 @@
                     </tr>
                     <tr>
                         <th scope="row">3</th>
-                        <td>Американские первичные акции (IPO)</td>
-                        <td style="color:#335433;"> до 100% - годовых </td>
+                        <td>Cбалансированная </td>
+                        <td style="color:#335433;"> доходность до 70% годовых </td>
                         <td>
                             {#<a href="/docs/ipo_doc.docx">Открыть</a>#}
 
 
-                            <a href="/services/ipo">Открыть</a>
+                            <a href="/services/3">Открыть</a>
 
 
 
@@ -431,15 +431,16 @@
                     </tr>
                     <tr>
                         <th scope="row">4</th>
-                        <td>Инвестиции в недвижимость Испании</td>
-                        <td style="color:#335433;" >  15% годовых  </td>
+                        <td>Кредит под залог недвижимости</td>
+                        <td style="color:#335433;" >  Ежемесячная доходность: 2%  </td>
                         <td>
-                            <a href="/services/thailand/property-investments">Открыть</a>
+                            <a href="/services/4">Открыть</a>
                             {#<a href="/docs/PH-V_LH_R.pdf">Открыть</a>  + <a href="/docs/attachments.zip">Фото</a>#}
                         </td>
                     </tr>
 
-                    <tr>
+                   <!--  
+                   <tr>
                         <th scope="row">5</th>
                         <td>Доходные автомобили Испании</td>
                         <td style="color:#335433;" > до 50% годовых </td>
@@ -465,7 +466,7 @@
                             <a href="/individual_robot">Открыть</a>
                         </td>
                     </tr>
-
+                    -->
 
 
                     </tbody>
