--- a/templates/index/base.html.twig
+++ b/templates/index/base.html.twig
@@ -55,12 +55,21 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Услуги Клиентам <b class="caret"></b></a>
                     <ul class="dropdown-menu">
 
-                        <li><a href="/individual_robot">Разработка индивидуального робота</a></li>
+
+
+                          <li><a href="/services/1">ПОРТФЕЛЬ 1 GERA</a></li>
+                          <li><a href="/services/2">ПОРТФЕЛЬ 2 ZEUS</a></li>
+                          <li><a href="/services/3">ПОРТФЕЛЬ 3 CБАЛАНСИРОВАННАЯ</a></li>
+                          <li><a href="/services/4">ПОРТФЕЛЬ 4 КРЕДИТ</a></li>
+
+
+
+                        {# <li><a href="/individual_robot">Разработка индивидуального робота</a></li>
                         <li><a href="/services/individual-management">Фондовая торговля</a></li>
                         <li><a href="/services/robotic-trading">Роботизированная торговля</a></li>
                         <li><a href="/services/ipo">Американские первичные акции (IPO)</a></li>
                         <li><a href="/services/thailand/property-investments">Инвестиции в недвижимость Испании</a></li>
-                        <li><a href="/services/cars">Доходные автомобили Испании</a></li>
+                        <li><a href="/services/cars">Доходные автомобили Испании</a></li> #}
                     </ul>
                 </li>
                 <li class="dropdown">
