--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -554,11 +554,20 @@
                     </a>
                     <!--start submenu -->
                     <ul>
-                        <li><a href="/services/individual-management">Фондовая торговля </a></li>
-                        {#<li><a href="/services/robotic-trading">Роботизированная торговля</a></li>#}
+                          <li><a href="/services/1">ПОРТФЕЛЬ 1 GERA</a></li>
+                          <li><a href="/services/2">ПОРТФЕЛЬ 2 ZEUS</a></li>
+                          <li><a href="/services/3">ПОРТФЕЛЬ 3 CБАЛАНСИРОВАННАЯ</a></li>
+                          <li><a href="/services/4">ПОРТФЕЛЬ 4 КРЕДИТ</a></li>
+                       
+
+
+
+
+                        {# <li><a href="/services/individual-management">Фондовая торговля </a></li>
+                         <li><a href="/services/robotic-trading">Роботизированная торговля</a></li> 
                         <li><a href="/services/ipo">Американские первичные акции (IPO)</a></li>
                         <li><a href="/services/thailand/property-investments">Инвестиции в недвижимость Испании</a></li>
-                        {#<li><a href="/services/cars">Доходные автомобили Тайланда</a></li>#}
+                        <li><a href="/services/cars">Доходные автомобили Тайланда</a></li> #}
                     </ul><!--end /submenu -->
                 </li><!--end /menu-li -->
 
