--- a/templates/admin/add.html.twig
+++ b/templates/admin/add.html.twig
@@ -21,7 +21,7 @@
         <div class="card tabs-left style-default-light">
             <ul class="card-head nav nav-tabs" data-toggle="tabs">
                 {#<li class=""> <a href="#first5"> <i class="fa fa-money"></i>  24paybank  </a></li>#}
-                <li class=""><a href="#second5">  <i class="fa fa-money"></i> payeer </a></li>
+                {# <li class=""><a href="#second5">  <i class="fa fa-money"></i> payeer </a></li>#}
                 <li class="active"><a href="#btc">  <i class="fa fa-money"></i> BTC  </a></li>
                 {# <li><a href="#second6">  <i class="fa fa-money"></i> MKB </a></li>
                  <li class=""><a href="#third5">THE THIRD</a></li>#}
@@ -176,6 +176,8 @@ function openurl100monetpro() {
                                              {% else %}
 
                                            <p> Кошелек , на который необходимо перевести Ваши средства:  <b>  1MLh9AZRfbCtfUHNW9qbmCvvjiGPDucAoT </b> </p>
+                                           <br />
+                                            <p>  После уплаты напишите нам в чат </p> 
 
                                             {#<p>  Ваш  кошелек   <b>  {{ user.bankcard  }} </b> </p>#}
 
